chore(ansible): fixed a spelling error
Signed-off-by: Takayuki AKAMINE <takayuki.akamine@tier4.jp>

--- a/ansible/roles/caret/templates/setenv_caret.bash.jinja2
+++ b/ansible/roles/caret/templates/setenv_caret.bash.jinja2
@@ -12,5 +12,5 @@ export LD_PRELOAD=$(readlink -f {{ WORKSPACE_ROOT}}/install/caret_trace/lib/libc
 # Execute ulimit command as below.
 # ulimit -n 16384
 
-# Add user application bulit with caret/rclcpp
+# Add user application built with caret/rclcpp
 # source /path/to/your/application/install/setup.bash
