--- a/ansible/roles/caret/templates/setenv_caret.bash.jinja2
+++ b/ansible/roles/caret/templates/setenv_caret.bash.jinja2
@@ -6,5 +6,11 @@ source {{ WORKSPACE_ROOT }}/caret_topic_filter.bash
 
 export LD_PRELOAD=$(readlink -f {{ WORKSPACE_ROOT}}/install/caret_trace/lib/libcaret.so)
 
-# please add user application bulit with caret/rclcpp
+# If you want to apply CARET to a large application,
+# it is recommended to increase the maximum number of
+# file descriptors to avoid data loss.
+# Execute ulimit command as below.
+# ulimit -n 16384
+
+# Add user application built with caret/rclcpp
 # source /path/to/your/application/install/setup.bash
