--- a/ansible/roles/caret/templates/setenv_caret.bash.jinja2
+++ b/ansible/roles/caret/templates/setenv_caret.bash.jinja2
@@ -6,6 +6,12 @@ source {{ WORKSPACE_ROOT }}/caret_topic_filter.bash
 
 export LD_PRELOAD=$(readlink -f {{ WORKSPACE_ROOT}}/install/caret_trace/lib/libcaret.so)
 
+USERNAME=$(whoami)
+ps aux|grep lttng-sessiond | grep $USERNAME | grep -v grep > /dev/null
+if [ $? -ne 0 ]; then
+  lttng-sessiond --daemonize
+fi
+
 # If you want to apply CARET to a large application,
 # it is recommended to increase the maximum number of
 # file descriptors to avoid data loss.
