--- a/ansible/roles/caret/templates/setenv_caret.bash.jinja2
+++ b/ansible/roles/caret/templates/setenv_caret.bash.jinja2
@@ -4,7 +4,7 @@ source /opt/ros/{{ rosdistro }}/setup.bash
 source {{ WORKSPACE_ROOT }}/install/local_setup.bash
 source {{ WORKSPACE_ROOT }}/caret_topic_filter.bash
 
-export LD_PRELOAD=$(readlink -f {{ WORKSPACE_ROOT}}/install/caret_trace/lib/libcaret.so)
+export LD_PRELOAD=$(readlink -f {{ WORKSPACE_ROOT}}/install/caret_trace/lib/libcaret.so):$LD_PRELOAD
 
 USERNAME=$(whoami)
 ps -axo user:32,command | grep lttng-sessiond | grep $USERNAME | grep -v grep > /dev/null
