--- a/ansible/roles/caret_iron/templates/setenv_caret.bash.jinja2
+++ b/ansible/roles/caret_iron/templates/setenv_caret.bash.jinja2
@@ -6,6 +6,7 @@ source {{ WORKSPACE_ROOT }}/caret_topic_filter.bash
 
 export LD_PRELOAD=$(readlink -f {{ WORKSPACE_ROOT}}/install/caret_trace/lib/libcaret.so):$LD_PRELOAD
 
+sleep 5    # For evaluator. Wait until caret record completed
 USERNAME=$(whoami)
 ps -axo user:32,command | grep lttng-sessiond | grep $USERNAME | grep -v grep > /dev/null
 if [ $? -ne 0 ]; then
