Add /AGNOCAST_SRV_* to the default values for topic filters.
Signed-off-by: ISP akm <akm@isp.co.jp>

--- a/ansible/roles/caret/templates/caret_topic_filter.bash.jinja2
+++ b/ansible/roles/caret/templates/caret_topic_filter.bash.jinja2
@@ -8,7 +8,8 @@ export CARET_IGNORE_NODES=\
 export CARET_IGNORE_TOPICS=\
 "\
 /clock:\
-/parameter_events\
+/parameter_events:\
+/AGNOCAST_SRV_*\
 "
 
 # if you want to select nodes or topics,
