--- a/ansible/roles/caret_jazzy/templates/caret_topic_filter.bash.jinja2
+++ b/ansible/roles/caret_jazzy/templates/caret_topic_filter.bash.jinja2
@@ -8,7 +8,8 @@ export CARET_IGNORE_NODES=\
 export CARET_IGNORE_TOPICS=\
 "\
 /clock:\
-/parameter_events\
+/parameter_events:\
+/AGNOCAST_SRV_*\
 "
 
 # if you want to select nodes or topics,
